# revise

./: .gitignore  COMMIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: audit.yml  build.yml  check.yml  ci.yml  coverage.yml  test.yml
src/: application.rs  document.rs  editor.rs  error.rs  filetype.rs  highlight.rs  keywords.rs  main.rs  row.rs  terminal.rs
