[package]
name = "revise"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nadmax/revise"

[dependencies]
termion = "2.0.1"
unicode-segmentation = "1.10.1"
cli-clipboard = "0.4.0"
thiserror = "1.0.49"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "s"
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"