[package]
name = "revise"
version = "0.1.3"
edition = "2021"
authors = ["nadmax <n.maximilien1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A minimalist text editor"
homepage = "https://github.com/nadmax/revise"
keywords = ["cli", "text-editor", "linux"]
readme = "README.md"
repository = "https://github.com/nadmax/revise"
categories = ["text-editors", "development-tools", "command-line-interface"]

[dependencies]
termion = "2.0.1"
unicode-segmentation = "1.10.1"
cli-clipboard = "0.4.0"
thiserror = "1.0.49"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "s"
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"